Switch services to track 2025.2
With general RC for 2025.2 available, we should
switch to track 2025.2 branch instead of master.

Change-Id: I6e69c66fe22eb64e6bff87e8edc60b7338a3a61b
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/inventory/group_vars/all/source_git.yml
+++ b/inventory/group_vars/all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Global Requirements
 requirements_git_repo: "{{ openstack_opendev_base_url }}/openstack/requirements"
-requirements_git_install_branch: 56798df8bac5995e09a8bf3ce8820e0d4f8710fe
-requirements_git_track_branch: master
+requirements_git_install_branch: b76491a016dd12987f51a01b75625b405063f669
+requirements_git_track_branch: stable/2025.2
