--- a/inventory/group_vars/cinder_all/source_git.yml
+++ b/inventory/group_vars/cinder_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Cinder service
 cinder_git_repo: "{{ openstack_opendev_base_url }}/openstack/cinder"
-cinder_git_install_branch: 4afd6cc37779a67ced50903c696353bd3ec1ade4
-cinder_git_track_branch: master
+cinder_git_install_branch: e1627440510f97047205a0fe673241595ed23091
+cinder_git_track_branch: stable/2025.2
