--- a/inventory/group_vars/designate_all/source_git.yml
+++ b/inventory/group_vars/designate_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Designate service
 designate_git_repo: "{{ openstack_opendev_base_url }}/openstack/designate"
-designate_git_install_branch: f307d62faf300222bfe62a1d52f850a8a2868121
-designate_git_track_branch: master
+designate_git_install_branch: 4e29c8308526cdb013aee09ff8f30e44b02f0911
+designate_git_track_branch: stable/2025.2
