--- a/inventory/group_vars/glance_all/source_git.yml
+++ b/inventory/group_vars/glance_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Glance service
 glance_git_repo: "{{ openstack_opendev_base_url }}/openstack/glance"
-glance_git_install_branch: f5713413fc5b97ecba02547a81fd9ef2347c5b53
-glance_git_track_branch: master
+glance_git_install_branch: 2ebeab5fca074cdd5ab194c1a0cdd079fd83d52a
+glance_git_track_branch: stable/2025.2
