--- a/inventory/group_vars/heat_all/source_git.yml
+++ b/inventory/group_vars/heat_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Heat service
 heat_git_repo: "{{ openstack_opendev_base_url }}/openstack/heat"
-heat_git_install_branch: 0bd7c8809461b2fe4229580f5c2ea458eb1cb5b6
-heat_git_track_branch: master
+heat_git_install_branch: c0eb453520be1b382d98cdd537adecaf8f9f48d9
+heat_git_track_branch: stable/2025.2
