--- a/inventory/group_vars/manila_all/source_git.yml
+++ b/inventory/group_vars/manila_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Manila service
 manila_git_repo: "{{ openstack_opendev_base_url }}/openstack/manila"
-manila_git_install_branch: 3d8fbfe7bf950107267a63336ff8f90dd7977f70
-manila_git_track_branch: master
+manila_git_install_branch: 1e090676e20fbbac3fa15e7b775a1b787fc40d17
+manila_git_track_branch: stable/2025.2
