--- a/inventory/group_vars/masakari_all/source_git.yml
+++ b/inventory/group_vars/masakari_all/source_git.yml
@@ -13,14 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Masakari service
 masakari_git_repo: "{{ openstack_opendev_base_url }}/openstack/masakari"
-masakari_git_install_branch: 1c699abd60342247f0e84ba3fc56b64a8bd1ffc7
-masakari_git_track_branch: master
+masakari_git_install_branch: 8489c366bb9237ca256325f6e7d96b5152acccfd
+masakari_git_track_branch: stable/2025.2
 
 ## Masakari monitors services
 masakari_monitors_git_repo: "{{ openstack_opendev_base_url }}/openstack/masakari-monitors"
-masakari_monitors_git_install_branch: ad3dc4a5d7ee1a6748dd9d751a33f01bc91685ce
-masakari_monitors_git_track_branch: master
+masakari_monitors_git_install_branch: 70358ade156c3f6f249e95f8515d0144fdb563a5
+masakari_monitors_git_track_branch: stable/2025.2
