--- a/inventory/group_vars/octavia_all/source_git.yml
+++ b/inventory/group_vars/octavia_all/source_git.yml
@@ -13,14 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Octavia service
 octavia_git_repo: "{{ openstack_opendev_base_url }}/openstack/octavia"
-octavia_git_install_branch: 4cde74a24b0dde4471a12d5c96be556fd5681cd4
-octavia_git_track_branch: master
+octavia_git_install_branch: fa44598bd8e410222a2c47b08196a2af3012fbfa
+octavia_git_track_branch: stable/2025.2
 
 ## Octavia OVN provider
 octavia_ovn_octavia_provider_git_repo: "{{ openstack_opendev_base_url }}/openstack/ovn-octavia-provider"
-octavia_ovn_octavia_provider_git_install_branch: 5895ae7c4e4da8926ccb8ff9c9826f518891fed1
-octavia_ovn_octavia_provider_git_track_branch: master
+octavia_ovn_octavia_provider_git_install_branch: c37def67dfff11db18d4154ce5f7a64f2b3b7573
+octavia_ovn_octavia_provider_git_track_branch: stable/2025.2
