--- a/inventory/group_vars/placement_all/source_git.yml
+++ b/inventory/group_vars/placement_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Placement service
 placement_git_repo: "{{ openstack_opendev_base_url }}/openstack/placement"
-placement_git_install_branch: a4644b2799b6de4f4cf69a6bce529a993e97fb71
-placement_git_track_branch: master
+placement_git_install_branch: fec9bf73894172f4d0577ab335e8d5ae302f92fc
+placement_git_track_branch: stable/2025.2
