--- a/inventory/group_vars/skyline_all/source_git.yml
+++ b/inventory/group_vars/skyline_all/source_git.yml
@@ -18,8 +18,8 @@
 ## Skyline service
 skyline_git_repo: "{{ openstack_opendev_base_url }}/openstack/skyline-apiserver"
 skyline_git_install_branch: fa44ef922497a3b661107a4671abe572656ae3c9
-skyline_git_track_branch: master
+skyline_git_track_branch: stable/2025.2
 
 skyline_console_git_repo: "{{ openstack_opendev_base_url }}/openstack/skyline-console"
-skyline_console_git_install_branch: 6.0.0
+skyline_console_git_install_branch: 7.0.0.0rc1
 skyline_console_git_track_branch: None
