--- a/inventory/group_vars/swift_all/source_git.yml
+++ b/inventory/group_vars/swift_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Swift service
 swift_git_repo: "{{ openstack_opendev_base_url }}/openstack/swift"
-swift_git_install_branch: 21325988dfe7d63d1f3ef78b9af8a2297f787e1f
-swift_git_track_branch: master
+swift_git_install_branch: 42e0a9582afb635d09f877fb2e04e59d0dcd699a
+swift_git_track_branch: stable/2025.2
