--- a/inventory/group_vars/tacker_all/source_git.yml
+++ b/inventory/group_vars/tacker_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Tacker service
 tacker_git_repo: "{{ openstack_opendev_base_url }}/openstack/tacker"
-tacker_git_install_branch: db7aaec7462e10538871a3f74b1ffef1b5e0b373
-tacker_git_track_branch: master
+tacker_git_install_branch: 34d4b1bb060c93c01750ca7a0e3019e953e372ef
+tacker_git_track_branch: stable/2025.2
