--- a/inventory/group_vars/aodh_all/source_git.yml
+++ b/inventory/group_vars/aodh_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Aodh service
 aodh_git_repo: "{{ openstack_opendev_base_url }}/openstack/aodh"
-aodh_git_install_branch: 882101887c3c54f220a0004d7c9673af08955ce3
-aodh_git_track_branch: master
+aodh_git_install_branch: 64659dab51b504024eff26faf8c25ebad8acc24c
+aodh_git_track_branch: stable/2025.2
