--- a/inventory/group_vars/cloudkitty_all/source_git.yml
+++ b/inventory/group_vars/cloudkitty_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Cloudkitty service
 cloudkitty_git_repo: "{{ openstack_opendev_base_url }}/openstack/cloudkitty"
-cloudkitty_git_install_branch: 4466ea82d02f5d80c271d64940ef268d7110db28
-cloudkitty_git_track_branch: master
+cloudkitty_git_install_branch: e023e315da806315909e1b72e0f53976ed5bd78b
+cloudkitty_git_track_branch: stable/2025.2
