--- a/inventory/group_vars/horizon_all/source_git.yml
+++ b/inventory/group_vars/horizon_all/source_git.yml
@@ -13,17 +13,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Horizon service
 horizon_git_repo: "{{ openstack_opendev_base_url }}/openstack/horizon"
-horizon_git_install_branch: 2792db67a73a9a39240bb6f2511f147cf0c1f790
-horizon_git_track_branch: master
+horizon_git_install_branch: 5becb40ca889eb6dce2d5708096664010e1625f9
+horizon_git_track_branch: stable/2025.2
 
 ## Adjutant dashboard plugin
 adjutant_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/adjutant-ui"
-adjutant_dashboard_git_install_branch: a2c9f79d96f01ff6cac222731f9f84c961fe807b
-adjutant_dashboard_git_track_branch: master
+adjutant_dashboard_git_install_branch: 6897a03a69075f43710123d9c628d5b9fdd65fb3
+adjutant_dashboard_git_track_branch: stable/2025.2
 
 ## Barbican dashboard plugin
 barbican_dashboard_git_repo: "{{ openstack_opendev_base_url }}//openstack/barbican-ui"
@@ -32,50 +32,50 @@ barbican_dashboard_git_track_branch: master
 
 ## Cloudkitty dashboard plugin
 cloudkitty_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/cloudkitty-dashboard"
-cloudkitty_dashboard_git_install_branch: a9040c4e567844ec46524a64279333e97f1205a2
-cloudkitty_dashboard_git_track_branch: master
+cloudkitty_dashboard_git_install_branch: 6efad66dcd530028129aadef4a9289ff55d5b85b
+cloudkitty_dashboard_git_track_branch: stable/2025.2
 
 ## Horizon Designate dashboard plugin
 designate_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/designate-dashboard"
-designate_dashboard_git_install_branch: 7ef1bf9a07c9ef13920d32316c9cb9a18b50a19e
-designate_dashboard_git_track_branch: master
+designate_dashboard_git_install_branch: 9f1e7e9855dc58aa8d3a2ef24eea758a93963b90
+designate_dashboard_git_track_branch: stable/2025.2
 
 ## Horizon Heat dashboard plugin
 heat_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/heat-dashboard"
-heat_dashboard_git_install_branch: 8457c7b04c5dd068c9f08d6a1a62efd49a421ddf
-heat_dashboard_git_track_branch: master
+heat_dashboard_git_install_branch: 7ee87d7504e97e0538697ba6d7f58884994db7ac
+heat_dashboard_git_track_branch: stable/2025.2
 
 ## Horizon Ironic dashboard plugin
 ironic_dashboard_git_repo: "{{ openstack_opendev_base_url}}/openstack/ironic-ui"
-ironic_dashboard_git_install_branch: abd2400a0e40fff5b50d5b3490915b4a0f3ebcbd
-ironic_dashboard_git_track_branch: master
+ironic_dashboard_git_install_branch: 162a61171f0dd632bc422b46063f40f805c92252
+ironic_dashboard_git_track_branch: stable/2025.2
 
 ## Horizon Magnum dashboard plugin
 magnum_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/magnum-ui"
-magnum_dashboard_git_install_branch: b3d46128ed8c7890d57e09f577ccf0a4ddbd5696
-magnum_dashboard_git_track_branch: master
+magnum_dashboard_git_install_branch: 8b85469c841a151d19b0f09eaf6bdc76f1d44f3b
+magnum_dashboard_git_track_branch: stable/2025.2
 
 ## Horizon Masakari dashboard plugin
 masakari_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/masakari-dashboard"
-masakari_dashboard_git_install_branch: 6ba6cb624135dbda7dd4808c10454cdff26cf38f
-masakari_dashboard_git_track_branch: master
+masakari_dashboard_git_install_branch: 9bf0bc6e4002db3490dccf714979b83888a9eb2d
+masakari_dashboard_git_track_branch: stable/2025.2
 
 ## Horizon Trove dashboard plugin
 trove_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/trove-dashboard"
-trove_dashboard_git_install_branch: 7772b389096c8d5933755f9eeef83b26662ee559
-trove_dashboard_git_track_branch: master
+trove_dashboard_git_install_branch: b2082772ee8fa8025203e5bfd6927c3aa206a799
+trove_dashboard_git_track_branch: stable/2025.2
 
 ## Horizon Octavia dashboard plugin
 octavia_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/octavia-dashboard"
-octavia_dashboard_git_install_branch: 3386566c7c98a055a4e42797f6843f5a44f9e48e
-octavia_dashboard_git_track_branch: master
+octavia_dashboard_git_install_branch: 990e7d1141ccd602101ee5cccf11a7ef24f52865
+octavia_dashboard_git_track_branch: stable/2025.2
 
 ## Horizon Neutron VPNaaS dashboard plugin
 neutron_vpnaas_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-vpnaas-dashboard"
-neutron_vpnaas_dashboard_git_install_branch: 5b3cee0b9b49c2366db62b1aaf226bfe9421e60b
-neutron_vpnaas_dashboard_git_track_branch: master
+neutron_vpnaas_dashboard_git_install_branch: 9bf310507187b7e0d4be71a56e47ce1d103b7f23
+neutron_vpnaas_dashboard_git_track_branch: stable/2025.2
 
 ## Horizon Neutron FWaaS dashboard plugin
 neutron_fwaas_dashboard_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-fwaas-dashboard"
-neutron_fwaas_dashboard_git_install_branch: 3b8c5994286ba990bd2faf1fc18a61d1a2b2540b
-neutron_fwaas_dashboard_git_track_branch: master
+neutron_fwaas_dashboard_git_install_branch: 3d1bc46f7ad2107e85adf0528c396c19b22188ea
+neutron_fwaas_dashboard_git_track_branch: stable/2025.2
