--- a/inventory/group_vars/ironic_all/source_git.yml
+++ b/inventory/group_vars/ironic_all/source_git.yml
@@ -13,14 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Ironic service
 ironic_git_repo: "{{ openstack_opendev_base_url }}/openstack/ironic"
-ironic_git_install_branch: 624b6fe7710a6f8d5dbfaf604d5e1d85a5e55e85
-ironic_git_track_branch: master
+ironic_git_install_branch: 0c7660d126905d92c2b825076017abae7c02e961
+ironic_git_track_branch: stable/2025.2
 
 ## Ironic inspector service
 ironic_inspector_git_repo: "{{ openstack_opendev_base_url }}/openstack/ironic-inspector"
-ironic_inspector_git_install_branch: 0ad770f70b090d4eb498746688e7a1352daae4dc
-ironic_inspector_git_track_branch: master
+ironic_inspector_git_install_branch: 743b60addf02c86dcc150a37de42dd46956812fe
+ironic_inspector_git_track_branch: stable/2025.2
