--- a/inventory/group_vars/magnum_all/source_git.yml
+++ b/inventory/group_vars/magnum_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Magnum service
 magnum_git_repo: "{{ openstack_opendev_base_url }}/openstack/magnum"
-magnum_git_install_branch: c85b9554d3d3570cc6baa2d69fd1b058682df104
-magnum_git_track_branch: master
+magnum_git_install_branch: 441b0866071d9e774cd842320243c96b2b39b909
+magnum_git_track_branch: stable/2025.2
