--- a/inventory/group_vars/neutron_all/source_git.yml
+++ b/inventory/group_vars/neutron_all/source_git.yml
@@ -13,36 +13,36 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Neutron service
 neutron_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron"
-neutron_git_install_branch: e3d341f73fe102f875f807f0a961b9ac00b49475
-neutron_git_track_branch: master
+neutron_git_install_branch: 253ede2b1b1de76e2452c4e2021040945469d4d6
+neutron_git_track_branch: stable/2025.2
 
 neutron_vpnaas_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-vpnaas"
-neutron_vpnaas_git_install_branch: e0b5e2001b594edd350f0d87869e117b8bb464a1
-neutron_vpnaas_git_track_branch: master
+neutron_vpnaas_git_install_branch: 7fbb8f3fa469d831beee216dae1c1829f0173be5
+neutron_vpnaas_git_track_branch: stable/2025.2
 
 neutron_fwaas_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-fwaas"
-neutron_fwaas_git_install_branch: e87ead131903f8d1baea2f651e504d27e2ae210b
-neutron_fwaas_git_track_branch: master
+neutron_fwaas_git_install_branch: 619969cb98dba35832e851ce0e1edaa3a52bf449
+neutron_fwaas_git_track_branch: stable/2025.2
 
 neutron_dynamic_routing_git_repo: "{{ openstack_opendev_base_url }}/openstack/neutron-dynamic-routing"
-neutron_dynamic_routing_git_install_branch: 9f21d9aa96427ca714b898ff966a33c09ff80696
-neutron_dynamic_routing_git_track_branch: master
+neutron_dynamic_routing_git_install_branch: 229ef20405f7767ebcb7a4e865ee11f874026306
+neutron_dynamic_routing_git_track_branch: stable/2025.2
 
 networking_bgpvpn_git_repo: "{{ openstack_opendev_base_url }}/openstack/networking-bgpvpn"
-networking_bgpvpn_git_install_branch: 90863c6369b6781ce585dee5661f4c7cd14b0ef0
-networking_bgpvpn_git_track_branch: master
+networking_bgpvpn_git_install_branch: 034e63b2cadd74380e4d0e20ab93f84e9f6a6158
+networking_bgpvpn_git_track_branch: stable/2025.2
 
 networking_sfc_git_repo: "{{ openstack_opendev_base_url }}/openstack/networking-sfc"
-networking_sfc_git_install_branch: 3b4a80b1e962a4a79275916f7c34417b13c01bd9
-networking_sfc_git_track_branch: master
+networking_sfc_git_install_branch: 861013d2f6172a168897e5863caeb44fa298d760
+networking_sfc_git_track_branch: stable/2025.2
 
 networking_generic_switch_git_repo: "{{ openstack_opendev_base_url}}/openstack/networking-generic-switch"
-networking_generic_switch_git_install_branch: e78eb0e94c73bd37a33cc69c7005c9cf31223cab
-networking_generic_switch_git_track_branch: master
+networking_generic_switch_git_install_branch: a1bf021c4b55e30feeaa70b33e9f643875eb0784
+networking_generic_switch_git_track_branch: stable/2025.2
 
 networking_nsx_git_repo: "{{ openstack_opendev_base_url }}/x/vmware-nsx"
 networking_nsx_git_install_branch: 715cb5fc1174b9226f043e49ffd389add44f070a
@@ -53,9 +53,9 @@ networking_nsxlib_git_install_branch: b49988f87a9fedb7e79041359a2bc7df1bf170e5
 networking_nsxlib_git_track_branch: master
 
 networking_baremetal_git_repo: "{{ openstack_opendev_base_url }}/openstack/networking-baremetal"
-networking_baremetal_git_install_branch: 81d40be9ef65c0fd68c83358e316728fdcc9a9ac
-networking_baremetal_git_track_branch: master
+networking_baremetal_git_install_branch: 75c491796b6a2f12c70560765f3c6df5ca064b25
+networking_baremetal_git_track_branch: stable/2025.2
 
 networking_ovn_bgp_git_repo: "{{ openstack_opendev_base_url }}/openstack/ovn-bgp-agent"
-networking_ovn_bgp_git_install_branch: 50e00d232bfc63861cd53867a10d168f015ebc20
-networking_ovn_bgp_git_track_branch: master
+networking_ovn_bgp_git_install_branch: fe0d730b960dd9d0b6731a81bea148b36e63af8d
+networking_ovn_bgp_git_track_branch: stable/2025.2
