--- a/inventory/group_vars/trove_all/source_git.yml
+++ b/inventory/group_vars/trove_all/source_git.yml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-### HEAD as of 01.09.2025 ###
+### HEAD as of 26.09.2025 ###
 
 ## Trove service
 trove_git_repo: "{{ openstack_opendev_base_url }}/openstack/trove"
-trove_git_install_branch: 57578561244c5e775104424a1c07ea6caad4647e
-trove_git_track_branch: master
+trove_git_install_branch: a6894cdb15f9c658c089d5fd42020ff94e3fa432
+trove_git_track_branch: stable/2025.2
