Freeze roles for Flamingo Beta release
Change-Id: Iddbe118d2ebcddedca93ad64dca7f7d48d0930d3
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/ansible-collection-requirements.yml
+++ b/ansible-collection-requirements.yml
@@ -11,7 +11,7 @@ collections:
 - name: openstack.osa
   source: https://opendev.org/openstack/openstack-ansible-plugins
   type: git
-  version: master
+  version: 66b7dde722c3c9769c14c78437ac738667afc538
 - name: community.general
   source: https://github.com/ansible-collections/community.general
   type: git
