--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -2,331 +2,331 @@
 - name: ansible-hardening
   scm: git
   src: https://opendev.org/openstack/ansible-hardening
-  version: master
+  version: 36dcc46a80ae4e6b251ed04e9056adebfff197e3
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: frrouting
   scm: git
   src: https://opendev.org/openstack/ansible-role-frrouting
-  version: master
+  version: 9c163985dd9b4c37bdc7a3594a3dba765eb0fa10
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-12'
 - name: httpd
   src: https://opendev.org/openstack/ansible-role-httpd
   scm: git
-  version: master
+  version: 7e5b616af38dd094ce4bacfbd9b9a03b8fecb4a1
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-04-24'
 - name: pki
   src: https://opendev.org/openstack/ansible-role-pki
   scm: git
-  version: master
+  version: 678ca5e47959c8dbb6983d7812ed9bba234e5bbe
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: python_venv_build
   src: https://opendev.org/openstack/ansible-role-python_venv_build
   scm: git
-  version: master
+  version: f33a1a17c8a65282db88234af87d0a5c03eb5d24
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-24'
 - name: systemd_mount
   src: https://opendev.org/openstack/ansible-role-systemd_mount
   scm: git
-  version: master
+  version: 1cf9cb83bd78b54a277221303aed19daf105b178
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-12'
 - name: systemd_networkd
   src: https://opendev.org/openstack/ansible-role-systemd_networkd
   scm: git
-  version: master
+  version: 26a8e3321560da075726bfc69e1ff2c0a2e2b80f
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-22'
 - name: systemd_service
   src: https://opendev.org/openstack/ansible-role-systemd_service
   scm: git
-  version: master
+  version: d8cc5a183c47cfc653735165a5124980868eb842
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-05-03'
 - name: uwsgi
   src: https://opendev.org/openstack/ansible-role-uwsgi
   scm: git
-  version: master
+  version: 884e85dfef2c172e94a5acf7af23e430cb710242
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-12'
 - name: zookeeper
   src: https://opendev.org/openstack/ansible-role-zookeeper
   scm: git
-  version: master
+  version: c7a31b3629c12d5f0218fe851964264ac7e248c3
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-10-02'
 - name: apt_package_pinning
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-apt_package_pinning
-  version: master
+  version: ac58a2196e9dd41bbb16b1972eaa1df1c016e345
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-12'
 - name: ceph_client
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-ceph_client
-  version: master
+  version: 625eb7423a1e27679c3264816f77564c34c77b6f
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-22'
 - name: galera_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-galera_server
-  version: master
+  version: 94058a5ed061eb1b750344f19d5735645e313262
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-24'
 - name: haproxy_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-haproxy_server
-  version: master
+  version: 15c8e7c23d4f7982633afcec1e372edf58894162
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-12'
 - name: lxc_container_create
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-lxc_container_create
-  version: master
+  version: 9f2ff79d01786a723fa6a994dda6b3316d857cdd
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: lxc_hosts
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-lxc_hosts
-  version: master
+  version: 1eac5db57eb9b8662f09d727670100976d33604e
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-23'
 - name: memcached_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-memcached_server
-  version: master
+  version: 856fc667b85c002ebf95205a96d79cea6c5647a4
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: openstack_hosts
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-openstack_hosts
-  version: master
+  version: f7cf2ee0e9288f868948a1cd48628572c27e1b83
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-30'
 - name: openstack_openrc
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-openstack_openrc
-  version: master
+  version: fa3d0e48989b20c9e417287fc086619e5c44cb5a
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_adjutant
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_adjutant
-  version: master
+  version: ec2ac199933c24ac8fc3490846da5ef7c073bc4e
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_aodh
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_aodh
-  version: master
+  version: 51b051786148515bd45181f255ebde15aff1c3af
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_barbican
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_barbican
-  version: master
+  version: d186f8adcc418f8dbff8773a4e2f8e5cf0481b30
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-10-02'
 - name: os_blazar
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_blazar
-  version: master
+  version: 73c34d1d8451315c75aa566fcc7df7a9a3624837
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_ceilometer
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_ceilometer
-  version: master
+  version: 3b92da9f5c2ea9ab7ca796c1365c64b576dcab35
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_cinder
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_cinder
-  version: master
+  version: 400f715d144cc3436c7f8414e1c61f1ab84c2529
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-23'
 - name: os_cloudkitty
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_cloudkitty
-  version: master
+  version: 2597fe15792b39226928668668760756267f2046
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_designate
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_designate
-  version: master
+  version: 517cdaa9dfeb348c6d6eb47f14a8d25be17db11c
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-10-01'
 - name: os_glance
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_glance
-  version: master
+  version: d62dfe219dfa7bffa9aa169a40cb174ee044b30a
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-18'
 - name: os_gnocchi
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_gnocchi
-  version: master
+  version: 87cc1bf816689230f9678378c824dd48d5cd480d
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_heat
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_heat
-  version: master
+  version: c1e12260684c320d111e97c3f09dd156a4b35c52
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_horizon
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_horizon
-  version: master
+  version: efec72a8140fd5ff2faa7017413851eb3ee76acc
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_ironic
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_ironic
-  version: master
+  version: 6a2d1dab7a5fc7ccb932880895870d646a1d39bc
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_keystone
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_keystone
-  version: master
+  version: 29efb7c6a2a5e97e344485426df363704880f3c7
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_magnum
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_magnum
-  version: master
+  version: e396dbafc93074f92f7d0fde36046a22024a9923
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_manila
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_manila
-  version: master
+  version: 2481d90c3f540a8e8a3a920ead5cb331369d3044
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_masakari
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_masakari
-  version: master
+  version: 52203d808a929ebadc4f84cd8906afb21f6db073
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_mistral
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_mistral
-  version: master
+  version: bc0507004a24484c57bfcce801cc29c529117752
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_neutron
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_neutron
-  version: master
+  version: 5f482bea9c0e3c4e2dbae93744ae7c9082f3d659
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-05'
 - name: os_nova
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_nova
-  version: master
+  version: 695fc40479c09419bad7464dd9f2c3806d73a642
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-28'
 - name: os_octavia
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_octavia
-  version: master
+  version: 8d4a94382127f9065ec493800f9a5ceda0154e1a
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-24'
 - name: os_placement
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_placement
-  version: master
+  version: 0ab9dbf7958785e77833a73ca605fd82affef3b1
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-23'
 - name: os_rally
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_rally
-  version: master
+  version: da5a2157e4ce31195ee6f6f07ceb9869eac4956e
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-23'
 - name: os_skyline
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_skyline
-  version: master
+  version: 09ea1fb3066373486d42552fdb596e81589c531b
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_swift
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_swift
-  version: master
+  version: 4a857c44d6f3822473388a18113456951cbe36c5
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-11'
 - name: os_tacker
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_tacker
-  version: master
+  version: dd8a05187edad306de5837672b1a9c639e6e04aa
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-02-11'
 - name: os_tempest
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_tempest
-  version: master
+  version: a6c817f0741dc56a4f20534034e2f5b5a14902d5
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-10-05'
 - name: os_trove
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_trove
-  version: master
+  version: 4339d7a63a2f86db57d9b4c639d7207f057f4e96
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: os_zun
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_zun
-  version: master
+  version: ffa6dbf18e59dd2c0ab33d3422800ee8ebaed54e
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: rabbitmq_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-rabbitmq_server
-  version: master
+  version: 47769e5c85194914f16028970abf1a5e8c206e8a
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 - name: repo_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-repo_server
-  version: master
+  version: af785c6bdef004d9eb46c299483c2e9c2aef9a77
   trackbranch: master
-  shallow_since: '2025-05-15'
+  shallow_since: '2025-09-25'
 # External dependencies
 - name: keepalived
   scm: git
   src: https://github.com/evrardjp/ansible-keepalived
-  version: master
+  version: c9b1c4a1552816742653fc73010c6b99a1f4855f
   trackbranch: master
   shallow_since: '2025-02-13'
 - name: pacemaker_corosync
   scm: git
   src: https://github.com/noonedeadpunk/ansible-pacemaker-corosync
-  version: master
+  version: 10032fe8b7fa17a425f33b00a4f586144d1b8805
   trackbranch: master
-  shallow_since: '2024-06-13'
+  shallow_since: '2025-08-18'
 - name: resolvconf
   scm: git
   src: https://github.com/logan2211/ansible-resolvconf
-  version: master
+  version: 2c0fad77e0f7b496179b2ba4d2b07af1fba36aa7
   trackbranch: master
   shallow_since: '2025-05-15'
 - name: unbound
   scm: git
   src: https://github.com/noonedeadpunk/ansible-role-unbound
-  version: master
+  version: d500b19c7160349f74c97da59fe37532ce545c40
   trackbranch: master
   shallow_since: '2025-03-26'
 - name: ceph-ansible
   scm: git
   src: https://github.com/ceph/ceph-ansible
-  version: stable-8.0
+  version: 1a613004e3fb3804f26a60369cec32ef9255bd2d
   trackbranch: stable-8.0
-  shallow_since: '2025-03-17'
+  shallow_since: '2025-09-16'
