--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -63,23 +63,19 @@
     name: openstack-ansible-upgrade-infra_lxc-jobs
     check:
       jobs:
-        - openstack-ansible-upgrade_2023.1-infra_lxc-rockylinux-9
-        - openstack-ansible-upgrade_2023.1-infra_lxc-ubuntu-jammy
-    gate:
-      jobs:
-        - openstack-ansible-upgrade_2023.1-infra_lxc-rockylinux-9
-        - openstack-ansible-upgrade_2023.1-infra_lxc-ubuntu-jammy
+        - openstack-ansible-upgrade_2023.1-infra_lxc-rockylinux-9:
+            voting: false
+        - openstack-ansible-upgrade_2023.1-infra_lxc-ubuntu-jammy:
+            voting: false
 
 - project-template:
     name: openstack-ansible-upgrade-aio_metal-jobs
     check:
       jobs:
-        - openstack-ansible-upgrade_2023.1-aio_metal-rockylinux-9
-        - openstack-ansible-upgrade_2023.1-aio_metal-ubuntu-jammy
-    gate:
-      jobs:
-        - openstack-ansible-upgrade_2023.1-aio_metal-rockylinux-9
-        - openstack-ansible-upgrade_2023.1-aio_metal-ubuntu-jammy
+        - openstack-ansible-upgrade_2023.1-aio_metal-rockylinux-9:
+            voting: false
+        - openstack-ansible-upgrade_2023.1-aio_metal-ubuntu-jammy:
+            voting: false
 
 - project-template:
     name: openstack-ansible-deploy-infra_lxc-jobs
@@ -187,8 +183,10 @@
         - openstack-ansible-deploy-aio_metal_tls-rockylinux-9
         - openstack-ansible-deploy-aio_metal_tls-ubuntu-jammy
         - openstack-ansible-deploy-aio_metal_haqueues-ubuntu-jammy
-        - openstack-ansible-upgrade_2023.1-aio_metal-rockylinux-9
-        - openstack-ansible-upgrade_2023.1-aio_metal-ubuntu-jammy
+        - openstack-ansible-upgrade_2023.1-aio_metal-rockylinux-9:
+            voting: false
+        - openstack-ansible-upgrade_2023.1-aio_metal-ubuntu-jammy:
+            voting: false
 
     gate:
       jobs:
