Set Rocky Linux distro jobs as NV
With no RDO being packaged for Flamingo, we need
to ensure that distro jobs for EL are not blocking our CI.

Change-Id: Ic8c924da2f01dd7b4cb2febb9b69944e8ba53b18
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -105,12 +105,12 @@
         - openstack-ansible-deploy-infra_distro_lxc-centos-10-stream:
             voting: false
         - openstack-ansible-deploy-infra_distro_lxc-debian-bookworm
-        - openstack-ansible-deploy-infra_distro_lxc-rockylinux-10
+        - openstack-ansible-deploy-infra_distro_lxc-rockylinux-10:
+            voting: false
         - openstack-ansible-deploy-infra_distro_lxc-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-infra_distro_lxc-debian-bookworm
-        - openstack-ansible-deploy-infra_distro_lxc-rockylinux-10
         - openstack-ansible-deploy-infra_distro_lxc-ubuntu-noble
 
 - project-template:
@@ -153,11 +153,11 @@
     name: openstack-ansible-deploy-hosts_distro_lxc-jobs
     check:
       jobs:
-        - openstack-ansible-deploy-hosts_distro_lxc-rockylinux-10
+        - openstack-ansible-deploy-hosts_distro_lxc-rockylinux-10:
+            voting: false
         - openstack-ansible-deploy-hosts_distro_lxc-ubuntu-noble
     gate:
       jobs:
-        - openstack-ansible-deploy-hosts_distro_lxc-rockylinux-10
         - openstack-ansible-deploy-hosts_distro_lxc-ubuntu-noble
 
 - project-template:
